examples/lua/tests/data/incomplete.lua
function f()
  g(1,
  local x = 2 +
end

function g()
end
